--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@
 
 <body>
     <video muted autoplay id="vid"></video>
-
+    <canvas id="canvas" width="320" height="240"></canvas>
+    <button id="click-photo">Click Photo</button>
     <script>
+        let video = document.querySelector("#vid");
+        let click_button = document.querySelector("#click-photo");
         navigator.mediaDevices.getUserMedia({
                 audio: false,
                 video: {
@@ -130,6 +133,15 @@
             })
             .then(stream => vid.srcObject = stream)
             .catch(console.error);
+        
+        
+        click_button.addEventListener('click', function() {
+            canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+            let image_data_url = canvas.toDataURL('image/jpeg');
+
+            // data url of the image
+            console.log(image_data_url);
+        });
 
     </script>
 </body>
